feat: Implement mobile touch interactions for carousels and update card styles with frosted glass effects and improved responsiveness.

--- a/index.html
+++ b/index.html
@@ -433,40 +433,54 @@
     <!-- === Insicloud === -->
     <article class="exp-card">
       <header>
-        <h3>Insicloud | AI/ML Intern</h3>
+        <h3>Insicloud | AI/ML Engineer</h3>
         <time>Jan 2025 – Present</time>
       </header>
       <ul>
-        <li>Developed and deployed AI/ML models focused on improving data accuracy, readability, and interpretability across business use cases.</li>
-        <li>Built and curated large-scale training datasets to support robust machine learning performance.</li>
-        <li>Implemented intelligent evaluation systems using agentic AI to automate decision-making and increase efficiency.</li>
+        <li>Developed a monitoring system integrating AI-based image recognition models and sound models for real-time anomaly updates.</li>
+        <li>Improved event detection by 30% using Python, TensorFlow, and OpenCV.</li>
+        <li>Trained and validated a Kaggle sound classification dataset and reached 90% model accuracy using scikit-learn.</li>
       </ul>
       <ul class="chips">
-        <li><img src="assets/skills/python-original.svg"  alt="">Python</li>
-        <li><img src="assets/skills/amazon-bedrock-logo-grayscale-caee.png"          alt="">Bedrock</li>
-        <li><img src="assets/skills/flask.png"            alt="">Flask</li>
-        <li><img src="assets/skills/react-original.svg"            alt="">React</li>
-        <li><img src="assets/skills/ollama-logo-png_seeklogo-593420.png"           alt="">Ollama</li>
-        <li><img src="assets/skills/langchain.png"        alt="">LangChain</li>
-        <li><img src="assets/skills/docker-original.svg"  alt="">Docker</li>
+        <li><img src="assets/skills/python-original.svg" alt="">Python</li>
+        <li><img src="assets/skills/tensorflow-original.svg" alt="">TensorFlow</li>
+        <li><img src="assets/skills/scikitlearn-original.svg" alt="">scikit-learn</li>
+        <li>OpenCV</li>
       </ul>
     </article>
 
-    <!-- === Teaching Assistant === -->
+    <!-- === VCU Web App Intern === -->
     <article class="exp-card">
       <header>
-        <h3>Virginia Commonwealth University – CS Department | Teaching Assistant</h3>
-        <time>Aug 2023 – Dec 2023</time>
+        <h3>VCU College of Engineering | Web Application Intern</h3>
+        <time>Aug 2023 – Dec 2024</time>
       </header>
       <ul>
-        <li>Guided students through Java programming assignments and theoretical concepts in computer science courses.</li>
-        <li>Conducted tutoring sessions, reviewed code, and provided constructive feedback on assignments.</li>
-        <li>Collaborated with faculty to develop teaching materials and improve student learning outcomes.</li>
+        <li>Developed a real-time VCU Bus Transit web application processing over 1200 route lookups per day.</li>
+        <li>Optimized backend performance by refining RESTful APIs in Flask, reducing latency by 30%.</li>
+        <li>Improved transit accessibility for students using React, Flask, and SQL.</li>
       </ul>
       <ul class="chips">
-        <li><img src="assets/skills/java-original.svg" alt="">Java</li>
-        <li><i class="fas fa-users"></i>Mentoring</li>
-        <li><img src="assets/skills/git-original.svg"   alt="">Git</li>
+        <li><img src="assets/skills/react-original.svg" alt="">React</li>
+        <li><img src="assets/skills/flask.png" alt="">Flask</li>
+        <li><img src="assets/skills/mysql-original.svg" alt="">SQL</li>
+      </ul>
+    </article>
+
+    <!-- === Capital One === -->
+    <article class="exp-card">
+      <header>
+        <h3>Capital One | Machine Learning Researcher (Capstone)</h3>
+        <time>Nov 2022 – Apr 2023</time>
+      </header>
+      <ul>
+        <li>Developed fraud telemetry pipelines using AWS Lambda, Kinesis, and Datadog, improving visibility by 40%.</li>
+        <li>Applied scikit-learn anomaly detection models using synthetic threat simulations to improve fraud detection.</li>
+      </ul>
+      <ul class="chips">
+        <li><img src="assets/skills/aws-lambda-1.svg" alt="">AWS</li>
+        <li><img src="assets/skills/datadog-1.svg" alt="">Datadog</li>
+        <li><img src="assets/skills/scikitlearn-original.svg" alt="">scikit-learn</li>
       </ul>
     </article>
 
@@ -474,79 +488,17 @@
     <article class="exp-card">
       <header>
         <h3>Bank of America | Software Development Intern</h3>
-        <time>Mar 2022 – Oct 2022</time>
+        <time>Jun 2021 – Oct 2022</time>
       </header>
       <ul>
-        <li>Developed a cross-platform mobile app using React Native aimed at enhancing financial literacy for college students.</li>
-        <li>Led user research efforts and applied feedback to optimize the app's UI/UX and engagement.</li>
-        <li>Successfully deployed the application on both iOS and Android platforms.</li>
+        <li>Designed specific features for a literacy platform on mobile using React Native, Flask, and SQLite.</li>
+        <li>Partnered with UI/UX team using Figma to translate mockups into responsive React components.</li>
       </ul>
       <ul class="chips">
-        <li><img src="assets/skills/react-original.svg"          alt="">React Native</li>
-        <li><img src="assets/skills/flask.png"          alt="">Flask</li>
-        <li><img src="assets/skills/sqlite-original.svg"alt="">SQLite</li>
-        <li><img src="assets/skills/github-original.svg"alt="">CI/CD</li>
-        <li><img src="assets/skills/figma.png"          alt="">Figma</li>
-        <li><i class="fas fa-user-check"></i>User Testing</li>
-      </ul>
-    </article>
-
-    <!-- === Capital One === -->
-    <article class="exp-card">
-      <header>
-        <h3>Capital One | Capstone Project</h3>
-        <time>Aug 2022 – Apr 2023</time>
-      </header>
-      <ul>
-        <li>Built a real-time cybersecurity event pipeline using AWS services and Datadog's Vector for secure log processing.</li>
-        <li>Applied natural language processing (NLP) and Synthetic Data Vault to simulate and analyze potential security threats.</li>
-        <li>Collaborated with a multi-disciplinary team to deliver a production-ready solution for incident analysis.</li>
-      </ul>
-      <ul class="chips">
-        <li><img src="assets/skills/aws-lambda-1.svg"     alt="">AWS Lambda</li>
-        <li><img src="assets/skills/aws-kinesis-logo-png_seeklogo-306153.png"    alt="">Kinesis</li>
-        <li><img src="assets/skills/mysql-original.svg"            alt="">SQL</li>
-        <li><img src="assets/skills/nlp-natural-language-processing.png"            alt="">NLP</li>
-        <li><img src="assets/skills/datadog-1.svg"        alt="">Vector</li>
-        <li><img src="assets/skills/raspberry-pi-logo.svg"   alt="">Raspberry Pi</li>
-      </ul>
-    </article>
-
-    <!-- === VCU Social-Good Web Dev === -->
-    <article class="exp-card">
-      <header>
-        <h3>Virginia Commonwealth University – VCU Software for Social Good (VIP Project)</h3>
-        <time>Aug 2022 – Dec 2022</time>
-      </header>
-      <ul>
-        <li>Worked with a team to design a JavaScript-based website aimed at improving night-time student transportation safety on campus.</li>
-        <li>Implemented features such as real-time bus tracking, user-friendly schedules, emergency alerts, and account security.</li>
-        <li>Focused on enhancing campus accessibility and safety through practical software solutions.</li>
-      </ul>
-      <ul class="chips">
-        <li><img src="assets/skills/javascript-original.svg" alt="">JavaScript</li>
-        <li><img src="assets/skills/react-original.svg"               alt="">React</li>
-        <li><img src="assets/skills/flask.png"               alt="">Flask</li>
-        <li><i class="fas fa-exchange-alt"></i>REST API</li>
-        <li><i class="fas fa-paint-brush"></i>UI/UX</li>
-      </ul>
-    </article>
-
-    <!-- === Peer Tutor === -->
-    <article class="exp-card">
-      <header>
-        <h3>Virginia Commonwealth University – CS Department | Peer Tutor</h3>
-        <time>Aug 2021 – Dec 2021</time>
-      </header>
-      <ul>
-        <li>Assisted students with introductory Java programming labs, debugging, and foundational computer science concepts.</li>
-        <li>Held regular support sessions to guide students through their coursework and enhance their understanding of Java.</li>
-        <li>Strengthened personal programming skills while helping peers succeed academically.</li>
-      </ul>
-      <ul class="chips">
-        <li><img src="assets/skills/java-original.svg" alt="">Java</li>
-        <li><i class="fas fa-chalkboard-teacher"></i>Teaching</li>
-        <li><i class="fas fa-bug"></i>Debugging</li>
+        <li><img src="assets/skills/react-original.svg" alt="">React Native</li>
+        <li><img src="assets/skills/flask.png" alt="">Flask</li>
+        <li><img src="assets/skills/sqlite-original.svg" alt="">SQLite</li>
+        <li><img src="assets/skills/figma.png" alt="">Figma</li>
       </ul>
     </article>
   </div>
@@ -558,86 +510,87 @@
   <section id="projects" class="snap fade show">
     <h2>📁 Projects</h2>
     <div class="proj-grid">
-      <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/proposal_scanner_prototype','_blank')">
-        <img src="assets/placeholder_court_proposal_scanne.png" alt="Proposal Scanner">
+      <!-- 1. EchoSentinel -->
+      <div class="proj-card" onclick="openProject('echosentinel')">
+        <img src="assets/projectiles_placeholder.png" alt="EchoSentinel">
         <div class="proj-info">
-          <h3>Proposal Scanner Prototype</h3>
-          <span>May 2025</span>
+          <h3>EchoSentinel</h3>
+          <span>2025</span>
           <ul>
-            <li>AI-powered document scanner designed to detect and summarize immigration-related proposal documents using OCR and NLP.</li>
-            <li>Built with Flask and integrated with AWS Textract, FAISS, and LLM summarization for hybrid structured/unstructured document analysis.</li>
-            <li>Supports both local and S3-based scanning, highlights structured fields, uses keyword boosting, and flags ambiguous cases.</li>
-            <li>Includes FAISS document classification, LLM summary generation, dynamic frontend UI with toggle panels, and scan history logging.</li>
+            <li>Gunshot Detection Agent using TensorFlow to filter noise and detect audio signatures.</li>
+            <li>Reduced false positives by 35% using IoT/Camera data fusion.</li>
           </ul>
         </div>
-        <span class="hover-msg">Click for Repo</span>
+        <span class="hover-msg">View Details</span>
       </div>
-      <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/solo-leveling-task-app','_blank')">
+
+      <!-- 2. Post-Quantum -->
+      <div class="proj-card" onclick="openProject('postquantum')">
+        <img src="assets/placeholder_videogamestore.png" alt="Post-Quantum Scanner">
+        <div class="proj-info">
+          <h3>Post-Quantum Scanner</h3>
+          <span>2025</span>
+          <ul>
+            <li>Flask microservices to audit SSL/TLS for quantum-safe compliance.</li>
+            <li>Automated key-store management with PowerShell.</li>
+          </ul>
+        </div>
+        <span class="hover-msg">View Details</span>
+      </div>
+      
+      <!-- 3. LegalAI -->
+      <div class="proj-card" onclick="openProject('legalai')">
+        <img src="assets/placeholder_court_proposal_scanne.png" alt="LegalAI">
+        <div class="proj-info">
+          <h3>LegalAI (Dean's Award)</h3>
+          <span>2025</span>
+          <ul>
+             <li>Document Intelligence Agent using Ollama/LLaMA and RAG.</li>
+             <li>High accuracy extraction from legal docs with low hallucination.</li>
+          </ul>
+        </div>
+        <span class="hover-msg">View Details</span>
+      </div>
+
+      <!-- 4. Smart Bottle Service -->
+      <div class="proj-card" onclick="openProject('smartbottle')">
+        <img src="assets/placeholder_solo_leveling_task_app.png" alt="Smart Bottle">
+        <div class="proj-info">
+          <h3>Smart Bottle Service</h3>
+          <span>2025</span>
+          <ul>
+             <li>Dynamic Pricing Platform using Angular, Flask, and ML Forecasting.</li>
+             <li>Optimizes revenue using event signals and regression models.</li>
+          </ul>
+        </div>
+        <span class="hover-msg">View Details</span>
+      </div>
+
+      <!-- 5. Fitness Tracker -->
+      <div class="proj-card" onclick="openProject('fitness')">
+        <img src="assets/placeholder_fitness.png" alt="Fitness Tracker">
+        <div class="proj-info">
+          <h3>Fitness Tracker</h3>
+          <span>2024</span>
+          <ul>
+            <li>Full-stack ASP.NET MVC app for workout logs and progress.</li>
+            <li>Uses Entity Framework and SQL Server.</li>
+          </ul>
+        </div>
+        <span class="hover-msg">View Details</span>
+      </div>
+
+      <!-- Keep Existing Projects that add value -->
+      <div class="proj-card" onclick="openProject('sololeveling')">
         <img src="assets/placeholder_solo_leveling_task_app.png" alt="Solo Leveling Task App">
         <div class="proj-info">
           <h3>Solo Leveling Task App</h3>
           <span>May 2025</span>
           <ul>
-            <li>Inspired by the Solo Leveling anime, this gamified productivity app helps users build daily habits through quests and XP leveling.</li>
-            <li>Built with React Native and Flask backend; supports user-specific core tasks, daily AI-generated quests, and XP/streak tracking.</li>
-            <li>Features LangChain + Ollama integration to suggest real-life quests based on goal and streak, with caching and async-safe logic.</li>
-            <li>Includes checkable core tasks, level-based titles, streak rewards, animated progress UI, and local persistence per user.</li>
+            <li>Gamified habit tracker inspired by anime mechanics.</li>
           </ul>
         </div>
-        <span class="hover-msg">Click for Repo</span>
-      </div>
-      <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/court-deadline-tracker','_blank')">
-        <img src="assets/placeholder_court_deadline_tracker.png" alt="Court Deadline Tracker">
-        <div class="proj-info">
-          <h3>Court Deadline Tracker</h3>
-          <span>Apr 2025</span>
-          <ul>
-            <li>Built a legal productivity tool using Flask and React that helps attorneys track and manage court deadlines with natural language input.</li>
-            <li>Integrated Google Calendar API and OAuth2 to allow per-user syncing of deadlines and automatic event creation with reminders.</li>
-            <li>Implemented intelligent parsing using regex, spaCy NER, and AI fallback via Ollama to support inputs like "Reply due 10 days after April 1."</li>
-            <li>Enabled real-time email alerts, edit/delete syncing with calendar, and a clean, mobile-friendly UI with calendar view and filters.</li>
-          </ul>
-        </div>
-        <span class="hover-msg">Click for Repo</span>
-      </div>
-      <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/Pomodoro','_blank')">
-        <img src="assets/pomodoro_timer.png" alt="Pomodoro Timer">
-        <div class="proj-info">
-          <h3>Pomodoro Timer with Motivation</h3>
-          <span>Feb 2025</span>
-          <ul>
-            <li>Developed a Pomodoro timer using React for the frontend and Flask for the backend to promote productivity and focus.</li>
-            <li>Animated a running character and implemented motivational texts to keep users engaged during sessions.</li>
-            <li>Showcased creative use of UI/UX, animation, and media integration in a time-tracking productivity tool.</li>
-          </ul>
-        </div>
-        <span class="hover-msg">Click for Repo</span>
-      </div>
-      <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/Clothing-assistant','_blank')">
-        <img src="assets/placeholder_clothing_consulting_robot.png" alt="Clothing Consulting Robot">
-        <div class="proj-info">
-          <h3>Clothing Consulting Robot</h3>
-          <span>Jul 2024</span>
-          <ul>
-            <li>Automated a weather-based clothing suggestion system using UiPath and web automation.</li>
-            <li>Integrated web scraping to retrieve real-time weather conditions and suggest appropriate attire.</li>
-            <li>Enhanced decision-making flow by combining automation, logic, and real-world practicality.</li>
-          </ul>
-        </div>
-        <span class="hover-msg">Click for Repo</span>
-      </div>
-      <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/PR-Tracker','_blank')">
-        <img src="assets/placeholder_fitness.png" alt="Fitness Tracker App">
-        <div class="proj-info">
-          <h3>Fitness Tracker App</h3>
-          <span>Dec 2024</span>
-          <ul>
-            <li>Built a full-stack fitness tracking web app using React (frontend), Flask (backend), and MySQL for data storage.</li>
-            <li>Created RESTful APIs for seamless data handling and dynamic dashboard updates.</li>
-            <li>Containerized the app using Docker for easy deployment, scalability, and environment consistency.</li>
-          </ul>
-        </div>
-        <span class="hover-msg">Click for Repo</span>
+        <span class="hover-msg">View Details</span>
       </div>
       <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/VideoGameStore','_blank')">
         <img src="assets/placeholder_videogamestore.png" alt="Video Game Store Web Application">
@@ -767,5 +720,29 @@ async function sendMessage() {
       <a href="#hero" class="backtotop" style="display: inline-block; margin-top: 1rem;"><i class="fas fa-arrow-up"></i></a>
     </div>
   </footer>
+  <!-- ===== MODAL ===== -->
+  <div id="project-modal" class="modal-overlay">
+    <div class="modal-content">
+      <button class="modal-close" onclick="closeModal()">&times;</button>
+      <div class="modal-body">
+        <img id="modal-img" src="" alt="Project Image" class="modal-img">
+        <div class="modal-text">
+          <h3 id="modal-title">Project Title</h3>
+          <span id="modal-date" class="modal-date">Year</span>
+          <div id="modal-tags" class="chips"></div>
+          <p id="modal-desc">Description goes here...</p>
+          <div class="modal-actions">
+            <a id="modal-repo" href="#" target="_blank" class="btn btn-secondary">
+              <i class="fab fa-github"></i> View Code
+            </a>
+            <a id="modal-live" href="#" target="_blank" class="btn btn-primary">
+              <i class="fas fa-external-link-alt"></i> Live Demo
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
